# matplotlib-curly-brace

./: .gitignore  pyproject.toml
curlybrace/: curlybrace.py
