[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "curlyBrace_modified"
requires-python = ">= 3.8"
version = "0.0.1"
dependencies = [
    "matplotlib",
    "numpy",
    "openpyxl",
]
description = "Plot curly brace in matplotlib"

[tool.hatch.build.targets.sdist]
include = [
  ".gitignore",
]
exclude = [
  "build/",
  "source/",
  ".readthedocs.yaml"
]

[tool.hatch.build.targets.wheel]
packages = ["curlybrace"]